--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -757,7 +757,7 @@ h1, h2, h3, h4, h5, h6 {
   content: "\f005";
   font-family: FontAwesome;
   font-size: 16px;
-  color: #194a9b;
+  color: #ed8232;
   position: absolute;
   bottom: -20px;
   left: 50%;
